--- a/CSS/flexbox-style.css
+++ b/CSS/flexbox-style.css
@@ -13,12 +13,19 @@ body {
 }
 
 main {
-    /* padding: 7rem 0; */
+   /* padding: 7rem 0;*/ 
 }
 
 .boxes{
-    height: calc(100vh - 14rem);
+    /*height: calc(100vh - ( 7 * 2rem));*/
+    height: calc(100vh);
     position: relative;
+    padding: 0 4rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 2rem 5rem;
 }
 
 .box {
@@ -31,4 +38,20 @@ main {
     color: #fff;
     font-size: 4rem;
     display: inline-block;
+    order: 10;
+    /*flex-basis: calc(50% - 5rem);*/
+    flex: 1;
+}
+
+.box:nth-child(1) {
+    order: 1;
+}
+
+.box:nth-child(2){
+    order: 2;
+    flex: 10;
+}
+
+.box:nth-child(7){
+    order: 3;
 }
